--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/textura">
 
     <androidx.constraintlayout.widget.ConstraintLayout
 
@@ -12,17 +13,59 @@
         android:theme="@style/AppTheme.styleLogin"
         tools:context=".ui.loginuser.LoginUserFragment">
 
+
         <ImageView
-            android:id="@+id/logo_image_view"
-            android:layout_width="248dp"
+            android:id="@+id/sectionTop"
+            android:layout_width="match_parent"
             android:layout_height="182dp"
-            android:layout_marginTop="84dp"
+            android:background="@drawable/container_buttom_corners_radium"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ImageContrastCheck"
+            android:contentDescription="@string/todo" />
+
+
+        <ImageView
+            android:id="@+id/sectionBot"
+            android:layout_width="match_parent"
+            android:layout_height="550dp"
+            android:background="@drawable/container_top_corners_radium"
+            android:backgroundTint="@color/white"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sectionTop"
+            android:contentDescription="@string/todo" />
+
+        <ImageView
+            android:id="@+id/bkgroud_logo_image_view"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginTop="90dp"
+            android:background="@drawable/circunferencia"
+            android:backgroundTint="@color/toolBarLogin"
             android:contentDescription="@string/todo"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/user"
+            tools:ignore="ImageContrastCheck" />
+
+        <ImageView
+            android:id="@+id/base_logo_image_view"
+            android:layout_width="155dp"
+            android:layout_height="155dp"
+            android:background="@drawable/circunferencia"
+            android:backgroundTint="@color/darkgreen"
+            android:contentDescription="@string/todo"
+            app:layout_constraintBottom_toBottomOf="@+id/bkgroud_logo_image_view"
+            app:layout_constraintEnd_toEndOf="@+id/bkgroud_logo_image_view"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="@+id/bkgroud_logo_image_view"
+            app:layout_constraintTop_toTopOf="@+id/bkgroud_logo_image_view"
             tools:ignore="ImageContrastCheck" />
 
         <Button
@@ -30,7 +73,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/button_radium"
             android:text="@string/sign_in"
@@ -48,7 +91,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="18dp"
             android:layout_marginEnd="8dp"
             android:text="@string/do_not_have_account"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,13 +105,13 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="300dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@+id/sectionTop">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/TextInputEmailLoginEditText"
@@ -84,7 +127,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.428"
@@ -97,7 +140,21 @@
                 android:layout_height="wrap_content"
                 android:hint="@string/password_login_user"
                 tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
+
         </com.google.android.material.textfield.TextInputLayout>
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="167dp"
+            android:layout_height="220dp"
+            android:contentDescription="@string/todo"
+            app:layout_constraintBottom_toBottomOf="@+id/base_logo_image_view"
+            app:layout_constraintEnd_toEndOf="@+id/base_logo_image_view"
+            app:layout_constraintHorizontal_bias="0.416"
+            app:layout_constraintStart_toStartOf="@+id/base_logo_image_view"
+            app:layout_constraintTop_toTopOf="@+id/base_logo_image_view"
+            app:layout_constraintVertical_bias="0.523"
+            app:srcCompat="@drawable/user" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
