--- a/app/src/main/res/layout/fragment_splash_ac.xml
+++ b/app/src/main/res/layout/fragment_splash_ac.xml
@@ -4,19 +4,152 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.splash.SplashActivity">
+    android:background="@color/statusBarLogin"
+    >
 
     <ImageView
-        android:id="@+id/SplashAC"
-        android:layout_width="390dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="32dp"
-        android:contentDescription="@string/image_splash_ac"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:id="@+id/azulGrande"
+        android:layout_width="260dp"
+        android:layout_height="260dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="75dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoAzul"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logocircular" />
+        tools:ignore="ImageContrastCheck,ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/amarilloGrande"
+        android:layout_width="165dp"
+        android:layout_height="165dp"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="200dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoAmarillo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/moradoGrande"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="185dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoMorado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/rosaGrande"
+        android:layout_width="175dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="185dp"
+        android:layout_marginTop="265dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoRosa"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+
+    <ImageView
+        android:id="@+id/rosaMid"
+        android:layout_width="15dp"
+        android:layout_height="15dp"
+        android:layout_marginStart="345dp"
+        android:layout_marginTop="265dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoRosa"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/rosaTop"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginStart="210dp"
+        android:layout_marginTop="155dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoRosa"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/moradoMid"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="365dp"
+        android:layout_marginTop="210dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoMorado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ImageContrastCheck"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/azulMid"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoAzul"
+        android:layout_marginTop="330dp"
+        android:layout_marginStart="30dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/todo" />
+
+    <ImageView
+        android:id="@+id/amarilloBot"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/circunferencia"
+        android:backgroundTint="@color/globoAmarillo"
+        android:contentDescription="@string/todo"
+        app:layout_constraintEnd_toStartOf="@+id/azulGrande"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/azulMid"
+        tools:ignore="ImageContrastCheck" />
+
+
+    <ImageView
+        android:id="@+id/imageView_grano"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        android:contentDescription="@string/todo"
+        android:src="@drawable/logograno"
+        app:layout_constraintBottom_toBottomOf="@+id/azulGrande"
+        app:layout_constraintEnd_toEndOf="@+id/azulGrande"
+        app:layout_constraintStart_toStartOf="@+id/azulGrande"
+        app:layout_constraintTop_toTopOf="@+id/azulGrande"
+        tools:ignore="ImageContrastCheck" />
+
+    <ImageView
+        android:id="@+id/textoAromasCafetales"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/textologo"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_grano"
+        android:contentDescription="@string/todo" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
