--- a/app/src/main/res/layout/fragment_login_user.xml
+++ b/app/src/main/res/layout/fragment_login_user.xml
@@ -105,13 +105,13 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="120dp"
+            android:layout_marginTop="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.428"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/sectionTop">
+            app:layout_constraintTop_toBottomOf="@+id/imageView4">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/TextInputEmailLoginEditText"
